--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         Textarea
         {
-            width:80%;
+            width:60%;
             padding:1rem;
             height:10vh;
             margin:1rem;
@@ -20,7 +20,7 @@
         #output
         {
            border: 1px solid black;
-           width: 80%;
+           width: 60%;
            margin:1rem;
            padding:1rem;
            height:10vh
@@ -31,12 +31,12 @@
             text-align:center;
             padding:1rem;
             margin: 1rem;
-            background-color:#F87171;
-            width:80%;
+            background-color:#F59E0B;
+            width:60%;
             padding:1rem;
         }
     #btn-translate{ 
-        background-color:#F87171;
+        background-color:#F59E0B;
         padding:1rem;
         margin-left:1rem;
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
@@ -49,7 +49,7 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        background-color:#F87171;
+        background-color:#F59E0B;
         text-align: center;
         margin:auto;
         padding:1rem;
@@ -66,7 +66,7 @@
 </head>
 <body>
     <div class="heading-color">
-    <h1>Banana Speaks</h1>
+    <h1>Dolan Speaks</h1>
     </div>
     <Textarea id="txt-input" placeholder="put your sentence in english and we will convert it into banana"></Textarea>
     <button id="btn-translate">Translate to Dolan</button>
