--- a/index.html
+++ b/index.html
@@ -45,10 +45,8 @@
 
     .footer
     {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
+        max-width: 100%;
+        min-height: 25px;
         background-color:#F59E0B;
         text-align: center;
         margin:auto;
